// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-FNZbm iVKgax sc-jWUzTF jVnlHW"
      color="#fff"
    >
      <div
        class="sc-bQtJOP fhHOJg"
      >
        10
        %
      </div>
      <div
        class="sc-jHkVfK gXSUvb"
        style="width: 10%;"
      >
        <div
          class="sc-fXEqXD eJshLY"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-FNZbm iVKgax sc-jWUzTF jVnlHW"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-bQtJOP fhHOJg"
      >
        10
        %
      </div>
      <div
        class="sc-jHkVfK jweYXF"
        style="width: 10%;"
      >
        <div
          class="sc-fXEqXD eJshLY"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-FNZbm JkhBI sc-jWUzTF jVnlHW"
      color="#fff"
    >
      <div
        class="sc-bQtJOP fhHOJg"
      >
        10
        %
      </div>
      <div
        class="sc-jHkVfK gXSUvb"
        style="width: 10%;"
      >
        <div
          class="sc-fXEqXD eJshLY"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
